fix button spacing

--- a/syweb/webclient/app.css
+++ b/syweb/webclient/app.css
@@ -473,8 +473,8 @@ textarea, input {
     border: 0px;
     width: 30px;
     height: 30px;
-    padding-left: 3px;
-    padding-right: 3px;
+    margin-left: 3px;
+    margin-right: 3px;
 }
 
 /*** Participant list ***/
